Bugfix: forgot this keyword, allthough the code did work?!?

--- a/oojs.html
+++ b/oojs.html
@@ -27,7 +27,7 @@
       let genderText = (this.gender === 'male') ? "He" : "She";
 
       // Handling interests array of any length correctly
-      let intString = interests[0];
+      let intString = this.interests[0];
 
       if (interests.length > 1) {
         for (let i = 1; i < this.interests.length - 1; i++) {
