--- a/oojs.html
+++ b/oojs.html
@@ -14,66 +14,64 @@
 </body>
 
 <script>
-  function Person(first, last, age, gender, interests) {
-    this.name = {
-      first: first,
-      last: last
-    };
-    this.age = age;
-    this.gender = gender;
-    this.interests = interests;
-  }
 
-  Person.prototype.bio = function () {
-    // Change output, depending on gender
-    let genderText = (this.gender === 'male') ? "He" : "She";
+  //Rewriting to ECMAScript 2015 with classes, instead of prototypal inheritance
+  // Wow! This code looks much easier to understand!
 
-    // Handling interests array of any length correctly
-    let intString = this.interests[0];
-
-    if (this.interests.length > 1) {
-      for (let i = 1; i < this.interests.length - 1; i++) {
-        intString += ', ' + this.interests[i];
-      }
-      intString += ' and ' + this.interests[this.interests.length - 1];
+  class Person {
+    constructor(first, last, age, gender, interests) {
+      this.name = {
+        first,
+        last
+      };
+      this.age = age;
+      this.gender = gender;
+      this.interests = interests;
     }
 
-    console.log(this.name.first + ' ' + this.name.last + ' is ' + this.age +
-      ' years old. ' + genderText + ' likes ' + intString + '.');
-  };
+    greeting() {
+      console.log(`Hi! I'm ${this.name.first}`);
+    };
 
-  Person.prototype.greeting = function () {
-    console.log('Hi! I\'m ' + this.name.first + '.');
-  };
+    farewell() {
+      console.log(`${this.name.first} has left the building. Bye for now!`);
+    };
 
-  Person.prototype.farewell = function () {
-    console.log(this.name.first + ' has left the building. Bye for now!');
-  };
+    bio() {
+      // Change output, depending on gender
+      let genderText = (this.gender === 'male') ? "He" : "She";
 
-  // Step 4
-  // Teacher inherits (first, last, age, gender, interests) from Person
-  // and has an additional property: subject
-  function Teacher(first, last, age, gender, interests, subject) {
-    Person.call(this, first, last, age, gender, interests);
+      // Handling interests array of any length correctly
+      let len = this.interests.length
+      let intString = this.interests[0];
 
-    this.subject = subject;
+      if (len > 1) {
+        for (let i = 1; i < len - 1; i++) {
+          intString += `, ${this.interests[i]}`;
+        }
+        intString += ` and ${this.interests[len - 1]}`;
+      }
+
+      console.log(`${this.name.first} ${this.name.last} is ${this.age} years old. ${genderText} likes ${intString}.`);
+    };
   }
 
-  // Needed to inherit the method's of Person:
-  Teacher.prototype = Object.create(Person.prototype);
+  class Teacher extends Person {
+    constructor(first, last, age, gender, interests, subject, grade) {
+      super(first, last, age, gender, interests);
 
-  // Set the teacher's prototype contructor form Person to Teacher
-  Object.defineProperty(Teacher.prototype, 'constructor', {
-    value: Teacher,
-    enumerable: false,
-    writable: true
-  });
+      // subject and grade are specific to Teacher
+      this.subject = subject;
+      this.grade = grade;
+    }
 
-  // Give Teacher a different greeting function
-  Teacher.prototype.greeting = function () {
-    let genderText = (this.gender === 'male') ? "Mr." : "Mrs.";
-    console.log('Hello. My name is ' + genderText + ' ' + this.name.last + ', and I teach ' + this.subject + '.');
-  };
+    greeting() {
+        let genderText = (this.gender === 'male') ? "Mr." : "Mrs.";
+        // console.log('Hello. My name is ' + genderText + ' ' + this.name.last + ', and I teach ' + this.subject + '.');
+        console.log(`Hello. My name is ${genderText} ${this.name.last}, and I teach ${this.subject}.`);
+      };
+  }
+
 
   // Test output of the new Teacher object definition
   var teacher1 = new Teacher('Dave', 'Griffiths', 31, 'male', ['football', 'cookery'], 'mathematics');
